# semantic-routing-demo

./: README.md  main.py  pyproject.toml
