[project]
name = "semantic-routing-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
